cmake_minimum_required(VERSION 3.12)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories("D:\\code\\leet\\googletest-release-1.8.0\\googletest\\include")

add_executable(leetcode
        src/leetcode.cpp
        leetcode_defs.cpp
        leetcode_defs.h
        Solution10.cpp
        Solution10.h
        Solution11.cpp
        Solution11.h
        Solution12.cpp
        Solution12.h
        Solution13.cpp
        Solution13.h
        Solution14.cpp
        Solution14.h
        Solution15.cpp
        Solution15.h
        Solution16.cpp
        Solution16.h
        Solution17.cpp
        Solution17.h
        Solution18.cpp
        Solution18.h
        Solution19.cpp
        Solution19.h
        Solution20.cpp
        Solution20.h
        Solution21.cpp
        Solution21.h
        Solution22.cpp
        Solution22.h
        Solution23.cpp
        Solution23.h
        Solution24.cpp
        Solution24.h
        Solution25.cpp
        Solution25.h
        Solution26.cpp
        Solution26.h
        Solution27.cpp
        Solution27.h
        Solution28.cpp
        Solution28.h
        Solution29.cpp
        Solution29.h
        Solution30.cpp
        Solution30.h
        Solution31.cpp
        Solution31.h
        Solution32.cpp
        Solution32.h
        Solution33.cpp
        Solution33.h
        Solution34.cpp
        Solution34.h
        Solution35.cpp
        Solution35.h
        Solution36.cpp
        Solution36.h
        Solution37.cpp
        Solution37.h
        Solution38.cpp
        Solution38.h
        Solution39.cpp
        Solution39.h
        Solution40.cpp
        Solution40.h
        Solution41.cpp
        Solution41.h
        Solution42.cpp
        Solution42.h
        Solution43.cpp
        Solution43.h
        Solution44.cpp
        Solution44.h
        Solution45.cpp
        Solution45.h
        Solution46.cpp
        Solution46.h
        Solution47.cpp
        Solution47.h
        Solution48.cpp
        Solution48.h
        Solution49.cpp
        Solution49.h
        Solution_3.cpp
        Solution_3.h
        Solution_4.cpp
        Solution_4.h
        Solution_5.cpp
        Solution_5.h
        Solution_6.cpp
        Solution_6.h
        Solution_7.cpp
        Solution_7.h
        Solution_8.cpp
        Solution_8.h
        Solution_9.cpp
        Solution_9.h
        TwoSum_2.cpp
        TwoSum_2.h)
